--- a/style.css
+++ b/style.css
@@ -9,13 +9,14 @@
 body {
     background-color: #222;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 60vh;
+    height: 100vh;
 }
 
 .box {
-    margin: 100px;
+    margin-bottom: 70px;
     width: 150px;
     height: 150px;
     border: none;
